Prevent color palette controls overflowing under email preview

--- a/plugins/woocommerce/client/admin/client/settings-email/style.scss
+++ b/plugins/woocommerce/client/admin/client/settings-email/style.scss
@@ -287,6 +287,10 @@ $wc-setting-email-width: 634px;
 	max-width: $wc-setting-email-width;
 }
 
+.wc-settings-email-color-palette-header {
+	max-width: $wc-setting-email-width;
+}
+
 .wc-settings-email-color-palette-title {
 	display: inline-block;
 	margin-right: 15px;
